yaml/openshift.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: #PROJ#
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: k8s-graph
  name: k8s-graph
  namespace: #PROJ#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-graph
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: k8s-graph
    spec:
      serviceAccountName: k8s-graph
      containers:
      - image: ghcr.io/kwkoo/k8s-graph:latest
        name: k8s-graph
        ports:
        - containerPort: 8080
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-graph
  name: k8s-graph
  namespace: #PROJ#
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-graph
status:
  loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: k8s-graph
  name: k8s-graph
  namespace: #PROJ#
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: k8s-graph
    weight: null
status: {}
